--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ openai==1.44.0
 pydantic==2.9.0
 pydantic_core==2.23.2
 PyJWT==2.9.0
+python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
 tqdm==4.66.5
